--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "bcryptjs": "^3.0.2",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
